2020-08-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha14 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha14: Fiscalini';git push
	git tag -a 4.9.4-alpha14 -m 'ncclimo clm_nfo to ncra';git push --tags

	* Merged Henry's nearest neighbor distance weighted interpolation algorithm

2020-08-20  Charlie Zender  <zender@uci.edu>

	* Nicefy and commit climatology bounds test script cb_tst.nco

2020-08-19  Charlie Zender  <zender@uci.edu>

	* ncclimo monthly dates good though seasonal and annual climo dates are borken

	* ncclimo annotate seasonal and annual climos with clm_nfo, fix double-free()'s

	* Coordinate and bounds values work well for climatological monthly means

2020-08-18  Charlie Zender  <zender@uci.edu>

	* Merge Henry's nco_clm_nfo_to_tm_bnds() and write nco_clm_nfo_get()

2020-08-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha13 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha13: Kamala & Krall';git push
	git tag -a 4.9.4-alpha13 -m 'nco_xtr_xcl_chk; ncra per-record wgt fix, no cll_mth for bnds; ncrename rgr github;';git push --tags

	* Change regression test to expect new behavior

	* Add nco_xtr_xcl_chk() to die with hint if extraction rules lead to retaining user-excluded variables

	* ncrename add GitHub issue to expected failures for regression tests #28, #31

2020-08-13  Charlie Zender  <zender@uci.edu>

	* ncclimo update documentation for hfcs, both on Confluence and in nco.texi

	* ncra drop cell_methods from climatology_bounds, time_bounds variables

2020-08-12  Charlie Zender  <zender@uci.edu>

	* ncclimo turn-on bnd2tpdclm in single- and multi-file input hfc modes

	* ncra, nces add cb->bnd2tpdclm to convert time bounds to diurnal climatology bounds

	* ncra, nces cell_methods for diurnal climatology bounds works

	* Clarify rules for exclusion of coordinate-like variables

2020-08-11  Charlie Zender  <zender@uci.edu>
